update to the code

--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,10 @@
         <p>
             Try changing that text by saying hi to "Jesus". Bonus points if you can figure out how to make Jesus <span class="yellow_text">yellow</span>.
         </p>
+        <img
+            id="good_food"
+            src="https://hips.hearstapps.com/hmg-prod/images/20191219-seo-steak-eggs-delish-ehg-8987-jpg-1579900349.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*"
+        >
     </section>
 
 </body>
